--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>react-webpack-boilerplate</title>
+    <title>Dissertation Helper</title>
 </head>
 
 <body>
